crates/tests/src/snapshots/fe_compiler_tests__compile_errors__emit_bad_args.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `Foo` expects 3 arguments, but 4 were provided
  ┌─ compile_errors/emit_bad_args.fe:8:10
  │
8 │     emit Foo((1, 2), z=10, y=true, x=5)
  │          ^^^ ------  ----  ------  --- supplied 4 arguments
  │          │                          
  │          expects 3 arguments

error: missing argument label
  ┌─ compile_errors/emit_bad_args.fe:8:14
  │
8 │     emit Foo((1, 2), z=10, y=true, x=5)
  │              ^ add `x=` here
  │
  = Note: this label is optional if the argument is a variable named `x`.

error: argument label mismatch
  ┌─ compile_errors/emit_bad_args.fe:8:22
  │
8 │     emit Foo((1, 2), z=10, y=true, x=5)
  │                      ^ expected `y`
  │
  = Note: arguments must be provided in order.

error: argument label mismatch
  ┌─ compile_errors/emit_bad_args.fe:8:28
  │
8 │     emit Foo((1, 2), z=10, y=true, x=5)
  │                            ^ expected `z`
  │
  = Note: arguments must be provided in order.

error: incorrect type for `Foo` argument `x`
  ┌─ compile_errors/emit_bad_args.fe:8:14
  │
8 │     emit Foo((1, 2), z=10, y=true, x=5)
  │              ^^^^^^ this has type `(u256, u256)`; expected type `address`


